fix: graph height on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -469,6 +469,7 @@ body {
 
 #optimal-chart {
     width: 100%;
+    height: 150px;
     cursor: pointer;
     border-radius: var(--radius);
     border: 1px solid var(--border);
